--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url('bgimg.png') no-repeat center center fixed;
+    background: url('bgimg.jpg') no-repeat center center fixed;
     background-size: cover;
     filter: blur(5px);
 }
