--- a/styles.css
+++ b/styles.css
@@ -2,19 +2,30 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow: hidden;
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: url('bgimg.png') no-repeat center center fixed;
     background-size: cover;
     filter: blur(5px);
+    z-index: -1;
 }
 
 .content {
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
     color: white;
-    font-size: 5em; /* Increased font size for larger text */
+    font-size: 5em; /* Taille de police augmentée pour un texte plus grand */
     font-family: Arial, sans-serif;
     text-shadow: 2px 2px 4px #000000;
-    z-index: 1; /* Ensures the text is above the background */
+    z-index: 1; /* Assure que le texte est au-dessus de l'arrière-plan */
 }
